# FeatureSense

./: README.md
Evaluation/: CommonVoice_SpeakerLeakage.ipynb  ESC-50 final code.ipynb  ESC-50-GroupWiseFeatures-ComputationalAnalysis.ipynb  ESC-50-GroupWiseFeatures-UTILITY.ipynb  ESC-50-extractedFeatures-newFeatureList.ipynb  ESC-50-mfcc-rf.ipynb  Emotion Classification_Final.ipynb  Emotion_featureSense.ipynb  SPEECH LEAKAGE_EXPERIMENT_TIMIT.ipynb  speaker_privacy_eval_rawaudio.ipynb
Task_aware_feature_selection/: All_Audio_Features_With_Privacy_Labels (1).csv  Audio_Feature_Categories_Table.csv  Audio_Features_Privacy_Table.csv  Comprehensive_Audio_Features_List.csv  Comprehensive_Audio_Features_Table.csv  Feature_Importance_by_Sound_Categories.csv  Individual_Feature_Extraction_Time_27s.csv  Optimized_Feature_Extraction_Times_28.csv  Privacy_Leakage_Data.csv  Selected_Optimal_Features.csv  category_importances.csv  combined_auc_results_optimized.csv  cost-utility.ipynb  cost.csv  utility.csv
Visualization/: PrivacyFilters_spec-existing_new.ipynb
featureSense/: __init__.py  extractor.py  features.py  groups.py  metrics.py  optimizer.py  pyproject.toml
