[project]
name = "featuresense"
version = "0.1.0"
description = "Privacy-aware audio feature extraction library for always-on sensing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "librosa",
    "PyWavelets",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
